example_Challenges/Broken_CI/challenge/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x04-broken-ci
  namespace: team-sandbox
  labels:
    app.kubernetes.io/name: x04-broken-ci
    app.kubernetes.io/part-of: latveria-ctf
    challenge: x04
    classification: sandbox-required
spec:
  replicas: 1
  selector:
    matchLabels:
      app: x04-broken-ci
  template:
    metadata:
      labels:
        app: x04-broken-ci
        challenge: x04
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: broken-ci
          image: x04-broken-ci:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "4000m"
              memory: "4096Mi"
          volumeMounts:
            - name: storage-volume
              mountPath: /tmp
      volumes:
        - name: storage-volume
          emptyDir:
            sizeLimit: 4Gi
